--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,38 @@
     <title>React App</title>
   </head>
   <body>
+    <table border=1 width="100%">
+      <tr>
+        <td>1_cell</td>
+        <td>2_cell</td>
+        <td>3_cell</td>
+        <td>4_cell</td>
+      </tr>
+      <tr>
+        <td>1_cell</td>
+        <td id="here">2_cell</td>
+        <td>3_cell</td>
+        <td>4_cell</td>
+      </tr>
+      <tr>
+        <td>1_cell</td>
+        <td>2_cell</td>
+        <td>3_cell</td>
+        <td>4_cell</td>
+      </tr>
+      <tr>
+        <td>1_cell</td>
+        <td>2_cell</td>
+        <td>3_cell</td>
+        <td>4_cell</td>
+      </tr>
+      <tr>
+        <td>1_cell</td>
+        <td>2_cell</td>
+        <td>3_cell</td>
+        <td>4_cell</td>
+      </tr>
+    </table>
     <div id="root"></div>
   </body>
 </html>
